# hebrew-holy-tanakh

./: .gitignore  GEMINI.md  LICENSE  README.md  bible_app.html  bootstraps.ps1  pyproject.toml
.github/: copilot-instructions.md
Tanakh/1. Torah - Instructions/: 02_exodus.json  03_leviticus.json  04_numbers.json  05_deuteronomy.json
Tanakh/2. Nevi'im - Prophets/1. Former Prophets/: 06_joshua.json  07_judges.json  08_1_samuel.json  09_2_samuel.json  10_1_kings.json  11_2_kings.json
Tanakh/2. Nevi'im - Prophets/2. Latter Prophets/: 12_isaiah.json  14_ezekiel.json
Tanakh/2. Nevi'im - Prophets/3. Minor Prophets/: 15_hosea.json  16_joel.json  17_amos.json  18_obadiah.json  19_jonah.json  20_micah.json  21_nahum.json  22_habakkuk.json  23_zephaniah.json  24_haggai.json  25_zechariah.json  26_malachi.json
Tanakh/3. Ketuvim - Writings/: 27_psalms.json  28_proverbs.json  29_job.json  30_song_of_solomon.json  31_ruth.json  32_lamentations.json  33_ecclesiastes.json  34_esther.json  35_daniel.json  36_ezra.json  37_nehemiah.json  38_1_chronicles.json  39_2_chronicles.json
gemantria/definitions/: gemantria_ciphers.json  shematria_rules.json
gemantria/docs/: CIPHERS.md  PHYSICS_MAP.md  Place Order Scenock Table.md  place_order_scenock_table.json
gemantria/mappings/: alphabet_map.json  gematria_multiscript_map.json  hebrew_parsing_tag_legend.json
hebrew-bible-cli/: EXAMPLES.md  INSTALLATION.md  README.md  SUMMARY.md  pyproject.toml
hebrew-bible-cli/src/hebrew_bible_cli/: __init__.py  cli.py  eqmap.py  features.py  helix.py  io.py
