[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hebrew_holy_tanakh"
version = "0.1.0"
description = "The Hebrew Holy Tanakh in JSON format with gematria analysis tools, cipher systems, and multiscript mappings."
readme = "README.md"
requires-python = ">=3.12.4"
license = { text = "MIT" }
license-files = ["LICENSE.md"]
authors = [
  { name = "W. Justin Fournell-Baker", email = "w.justin.fournell-baker@emnous.com" }
]

classifiers = [
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Linguistic",
]

dependencies = [
  # CLI + pretty output (remove if you truly don’t want a CLI)
  "typer>=0.12.3",
  "rich>=13.7.1",

  # Numerics / plotting for helix + analysis (optional but useful)
  "numpy>=1.26.4",
  "matplotlib>=3.8.4",

  # Better Unicode / Hebrew regex handling
  "regex>=2024.5.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
  "mypy>=1.0.0"
]

# Command-prompt entrypoint: `tanakh ...`
# Change the module/function if your CLI lives elsewhere.
[project.scripts]
tanakh = "hebrew_holy_tanakh.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Include JSON (and other data files) inside the installed package/wheel.
# Put your Tanakh JSON under: src/hebrew_holy_tanakh/data/...
[tool.setuptools.package-data]
hebrew_holy_tanakh = [
  "**/*.json",
  "**/*.txt",
  "**/*.csv",
  "**/*.md"
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
  ".git",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "__pypackages__",
  "build",
  "dist",
  "*.md",
  "node_modules",
]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "PL", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true